--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Dog Breed Classifier</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body>
   <h1>Upload a Dog Image</h1>
